2003-1-18   Andrew H. Chatham <pyogg@andrewchatham.com>
	* Applied a patch from Nicodemus <nicodemus@globalite.com.br> to 
	get this to build on windows.
	
2002-9-24   Andrew H. Chatham <pyogg@andrewchatham.com>
	* setup.py: fixed regular expression
	
2002-07-23  Andrew H. Chatham <andrew@andrewchatham.com>
	* Bumped version to 1.0 to match libogg
	
2002-07-23  Andrew H. Chatham <andrew@andrewchatham.com>
	* pyoggpackbuff.c: Removed *_huff functions (no longer in API).
	
2002-05-21  Andrew H. Chatham <andrew.chatham@duke.edu>
	* _oggmodule.c: Include another header
	
2002-02-17  Andrew H. Chatham <andrew.chatham@duke.edu>
	* _oggmodule.c, pyoggsyncstate.c, pyoggstreamstate.c,
	  pyoggpage.c, pyoggpacket.c, pyoggpackbuff.c:
	Set the ob_types in the init method instead of statically, as 
	MSVC complains.
	
2002-01-27  Andrew H. Chatham <andrew.chatham@duke.edu>
	* config_unix.py: Pass dir flags better
	* pyoggpackbuff.c (py_oggpack_reset), (py_oggpack_writeclear): 
		Return None from functions
	* bump version to 0.5
	
2001-09-02  Andrew H. Chatham <andrew.chatham@duke.edu>
	* setup.py: bumped version number to 0.4
	
2001-08-30  Andrew H. Chatham <andrew.chatham@duke.edu>

	* include/pyogg/pyogg.h, src/_oggmodule.c:
	Pass a copy of the implementation of arg_to_int64 so it can be shared
	by the Vorbis module.
	
2001-05-14  Andrew Chatham <andrew.chatham@duke.edu>
	* setup.py : Bumped  to version 0.3

	* src/general.c (arg_to_64): Changed to arg_to_int64. Removed
	DECREF and changed calling convention and return value. Also
	moved to <pyogg/pyogg.h> so it can be shared with vorbis-python

	* src/general.h: Fixed preprocessor warnings

	* src/pyoggpacket.c (py_ogg_packet_setattr): Changed to arg_to_int64

2001-05-01  Mike Coleman  <mkc@mathdogs.com>
	* test/oggtail.py: new script to show off some of ogg module
	
	* src/pyogg*.c: methods with no args now check that they're called
	this way

	* src/pyogg*.c: add repr functions
