@@ -11,7 +11,7 @@ from distutils.core import setup
 from distutils.extension import Extension
 
 VERSION_MAJOR = 1
-VERSION_MINOR = 3
+VERSION_MINOR = 4
 pyogg_version = str(VERSION_MAJOR) + "." + str(VERSION_MINOR)
 
 def get_setup():
